fix: migrate  `deploy` cli command to action

--- a/.github/workflows/deploy-prefect-flow.yaml
+++ b/.github/workflows/deploy-prefect-flow.yaml
@@ -52,10 +52,22 @@ jobs:
             python-version: "3.11"
             cache: "pip"
 
-        - name: Prefect Deploy
-          env:
-            PREFECT_API_KEY: ${{ secrets.PREFECT_API_KEY }}
-            IMAGE_NAME: ${{ secrets.DOCKER_USERNAME }}/${{ env.PROJECT_NAME }}:${{ steps.get-commit-hash.outputs.COMMIT_HASH }}-${{ env.ENVIRONMENT }}
-          run: |
-            pip install -r requirements.txt
-            prefect deploy --all --prefect-file prefect.yaml
+        # - name: Prefect Deploy
+        #   env:
+        #     PREFECT_API_KEY: ${{ secrets.PREFECT_API_KEY }}
+        #     IMAGE_NAME: ${{ secrets.DOCKER_USERNAME }}/${{ env.PROJECT_NAME }}:${{ steps.get-commit-hash.outputs.COMMIT_HASH }}-${{ env.ENVIRONMENT }}
+        #   run: |
+        #     pip install -r requirements.txt
+        #     prefect deploy --prefect-file prefect.yaml
+        - name: Prefect Auth
+          uses: PrefectHQ/actions-prefect-auth@v1
+          with:
+            prefect-api-key: ${{ secrets.PREFECT_API_KEY }}
+            prefect-workspace: default
+
+        - name: Run Prefect Deploy
+          uses: PrefectHQ/actions-prefect-deploy@v3
+          with:
+            deployment-names: aws-worker-flow
+            # requirements-file-paths: ./examples/simple/requirements.txt
+            deployment-file-path: prefect.yaml
