--- a/.github/workflows/deploy-prefect-flow.yaml
+++ b/.github/workflows/deploy-prefect-flow.yaml
@@ -63,7 +63,7 @@ jobs:
           uses: PrefectHQ/actions-prefect-auth@v1
           with:
             prefect-api-key: ${{ secrets.PREFECT_API_KEY }}
-            prefect-workspace: default
+            prefect-workspace: entree-chef/default
 
         - name: Run Prefect Deploy
           uses: PrefectHQ/actions-prefect-deploy@v3
