--- a/.github/workflows/push-to-ecr.yaml
+++ b/.github/workflows/push-to-ecr.yaml
@@ -24,6 +24,10 @@ jobs:
     steps:
       - name: Git clone the repository
         uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: configure aws credentials
         uses: aws-actions/configure-aws-credentials@v1.7.0
         with:
@@ -35,3 +39,12 @@ jobs:
       - name: Sts GetCallerIdentity
         run: |
           aws sts get-caller-identity
+
+      - name: ECR list 
+        run: aws ecr aws ecr describe-repositories
+
+      - name: pull private image
+        run: |
+            docker pull 573574571452.dkr.ecr.us-east-2.amazonaws.com/prefect-flows:latest
+
+
