--- a/.github/workflows/push-to-ecr.yaml
+++ b/.github/workflows/push-to-ecr.yaml
@@ -36,12 +36,14 @@ jobs:
         run: |
           aws sts get-caller-identity
 
-      - name: Check IAM permissions
+      - name: Check ECR GetAuthorizationToken
         run: |
-          aws iam simulate-principal-policy --policy-source-arn arn:aws:iam::573574571452:role/GitHubAction-AssumeRoleWithAction --action-names ecr:GetAuthorizationToken ecr:DescribeRepositories ecr:BatchGetImage
+          aws ecr get-authorization-token
+        continue-on-error: true
 
-      - name: ECR list 
+      - name: ECR list repositories
         run: aws ecr describe-repositories
+        continue-on-error: true
 
       - name: Login to Amazon ECR
         id: login-ecr
@@ -57,5 +59,5 @@ jobs:
         run: |
           echo "Debug information:"
           aws sts get-caller-identity
-          aws ecr get-authorization-token
-          aws ecr describe-repositories
+          aws ecr get-authorization-token || true
+          aws ecr describe-repositories || true
