--- a/.github/workflows/push-to-ecr.yaml
+++ b/.github/workflows/push-to-ecr.yaml
@@ -1,26 +1,30 @@
 # https://aws.amazon.com/blogs/security/use-iam-roles-to-connect-github-actions-to-actions-in-aws/
 
-name: Connect to an AWS role from a GitHub repository
+name: Deploy Prefect flow to ECR
+env:
+  PROJECT_NAME: prefect-3-demo
+  AWS_REGION: us-east-2
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
-env:
-  AWS_REGION: "us-east-2"
+    branches:
+      - main
 
 permissions:
-      id-token: write
-      contents: read
+  id-token: write
+  contents: read
 
 jobs:
-  AssumeRoleAndCallIdentity:
+  deploy:
+    name: Deploy to production
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+    env:
+      ENVIRONMENT: prod
+
     steps:
-      - name: Git clone the repository
-        uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -32,32 +36,49 @@ jobs:
           role-session-name: GitHub_to_AWS_via_FederatedOIDC
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Sts GetCallerIdentity
-        run: |
-          aws sts get-caller-identity
-
-      - name: Check ECR GetAuthorizationToken
-        run: |
-          aws ecr get-authorization-token
-        continue-on-error: true
-
-      - name: ECR list repositories
-        run: aws ecr describe-repositories
-        continue-on-error: true
-
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Pull private image
+      - name: Get commit hash
+        id: get-commit-hash
+        run: echo "COMMIT_HASH=$(git rev-parse --short HEAD)" >> "$GITHUB_OUTPUT"
+
+      - name: Build and push
+        id: build-docker-image
+        env:
+          GITHUB_SHA: ${{ steps.get-commit-hash.outputs.COMMIT_HASH }}
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: ${{ env.PROJECT_NAME }}
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.GITHUB_SHA }}, ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+          cache: "pip"
+      - run: pip install -r requirements.txt
+
+      - name: Prefect Auth
         run: |
-          docker pull 573574571452.dkr.ecr.us-east-2.amazonaws.com/prefect-flows:latest
-        if: success()
+          prefect cloud login \
+          --key ${{ secrets.PREFECT_API_KEY }} \
+          --workspace entree-chef/default
+        shell: bash
+
+      - name: Prefect Deploy
+        run: |
+          prefect cloud workspace ls  
+          prefect deploy --all --prefect-file prefect.yaml
 
       - name: Debug on failure
         if: failure()
         run: |
           echo "Debug information:"
           aws sts get-caller-identity
-          aws ecr get-authorization-token || true
-          aws ecr describe-repositories || true
