--- a/prefect.yaml
+++ b/prefect.yaml
@@ -61,6 +61,6 @@ deployments:
     name: my-ecs-pool
     work_queue_name: null
     job_variables:
-      image: '573574571452.dkr.ecr.us-east-2.amazonaws.com/prefect-flows:latest'
+      image: '573574571452.dkr.ecr.us-east-2.amazonaws.com/prefect-3-demo:latest'
   enforce_parameter_schema: true
   schedules: []
